Fixed borders of events to remove overflow

--- a/Bootstrap/assets/src/sass/sitefinity/event/_sf-event.scss
+++ b/Bootstrap/assets/src/sass/sitefinity/event/_sf-event.scss
@@ -1,7 +1,6 @@
 // Kendo and bootstrap overrides
 
 div.k-event {
-	border-width: 2px;
 	border-radius: 0;
 }
 .nav-pills>li+li {
